--- a/package.json
+++ b/package.json
@@ -2,13 +2,20 @@
   "name": "bbb-project",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://haidarhossain.tk",
   "dependencies": {
+    "@popperjs/core": "^2.11.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "bootstrap": "^5.1.3",
+    "gsap": "^3.9.1",
     "react": "^17.0.2",
+    "react-countup": "^6.1.1",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
+    "react-slick": "^0.28.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -34,5 +41,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "node-sass": "^7.0.1",
+    "normalize.css": "^8.0.1",
+    "react-audio-player": "^0.17.0"
   }
 }
